[package]
name = "vilmos_assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
png = "0.17.2"
strum = "0.22"
strum_macros = "0.22"
rand = "0.8.4"
num-integer = "0.1"
ini = "1.3.0"
